# testTodo

./: .gitignore  CMakeLists.txt  README.md  ToDoList.qml  main.cpp  mainwindow.cpp  qtquickcontrols2.conf  todolist.cpp  todomodel.cpp
